# Levara

./: .dockerignore  .env.template  .gitignore  .golangci.yml  152-fz.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Edvards_Dzanet_Uragan_r4_P61XH.txt  GEMINI.md  Makefile  OPTIMIZATION.md  PLAN_GO_REWRITE.md  README.md  README_RU.md  TRANSFER.md  about_memory.md  best_for_cc.md  cases.md  design-bm25-cognify.md  design-flags-profiles.md  docker-compose.full-stack.yml  docker-compose.levaraos.yml  docker-compose.pi.yml  docker-compose.postgres.yml  docker-compose.qv.yml  docker-compose.qwen-stack.yml  docker-compose.qwen3.yml  docker-compose.server.yml  docker-compose.yml  from_cod.md  go.mod  go.sum  (+10 more)
Cognevra/: Dockerfile  Makefile  go.mod  go.sum  prometheus.yml  readme.md
Levara/: .gitignore  Dockerfile  Dockerfile.qwen3rerank  LICENSE  Makefile  README.md  README_RU.md  docker-compose.yml  go.mod  go.sum  prometheus.yml   how_cognee_work.md
Levara-legacy/: DEPRECATED.md  Dockerfile  docker-compose.yml  go.mod
Raspberry/: Dockerfile  README.md  TUNING.md  backup.sh  build.sh  cognevra.env  cognevra.service  docker-compose.yml  levara.env  levara.service  monitor.sh  setup.sh
VectraDB/: .gitignore  Dockerfile  LICENSE  (+5 more)
cognee-plugin/: README.md  pyproject.toml
cognee-plugin/cognevra_adapter/: CognevraAdapter.py  __init__.py
cognee-plugin/levara_adapter/: LevaraAdapter.py  __init__.py
cognee-plugin/vectradb_adapter/: VectraDBAdapter.py  __init__.py
(+1556 files in other folders)
