[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognee-vectradb"
version = "0.1.0"
description = "VectraDB adapter plugin for Cognee — high-performance vector search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["vectradb_adapter"]
