[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognee-levara"
version = "0.2.0"
description = "Levara adapter plugin for Cognee — high-performance vector search via gRPC"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "grpcio-tools>=1.60.0",
]

[tool.hatch.build.targets.wheel]
packages = ["levara_adapter"]
